swaync: workaround for a bug in the notification shade?
sometimes notifications are cut off at the very bottom

--- a/swaync/.config/swaync/style.css
+++ b/swaync/.config/swaync/style.css
@@ -27,6 +27,7 @@
 
 .notification-row .notification-background {
   padding: 6px 12px;
+  margin-bottom: 8px;
 }
 
 .notification-row .notification-background .close-button {
